syntax = "proto3";

package helloWorld;

option go_package = "./proto;helloWorld";

service HelloWorld {
	rpc Login(UserLoginRequest) returns (UserResponse){}
}


message UserLoginRequest {
	string account = 1;
	string password = 2;
}

message UserResponse {
	int32 code = 1;
	string msg = 2;
	string user_name = 3;
}